add register method
