# routers/router.go
@@ -8,6 +8,7 @@ import (
 
 	// docs is generated by Swag CLI, you have to import it.
 	"learn_go/docs"
+	"learn_go/pkg/setting"
 	"learn_go/routers/api"
 	"learn_go/routers/user"
 )
@@ -23,10 +24,10 @@ func GetRouters() *gin.Engine {
 	// docs.SwaggerInfo.Schemes = []string{"http", "https"}
 
 	router := gin.New()
+
 	router.Use(gin.Logger())
 	router.Use(gin.Recovery())
 
-	router.PUT("/user", user.AddUser)
 	router.POST("/register", user.Register)
 
 	route := router.Group("/api")
@@ -35,7 +36,9 @@ func GetRouters() *gin.Engine {
 	}
 
 	// url := ginSwagger.URL("http://localhost:8888/swagger/doc.json") // The url pointing to API definition
-	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	if setting.ServerSetting.RunMode == "debug" {
+		router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	}
 
 	return router
 }
